@@ -1,7 +1,7 @@
 /*
  * EmuTOS aes
  *
- * Copyright (c) 2002-2013 The EmuTOS development team
+ * Copyright (c) 2002-2014 The EmuTOS development team
  *
  * This file is distributed under the GPL, version 2 or at your
  * option any later version.  See doc/license.txt for details.
@@ -22,8 +22,8 @@ WORD dos_sfirst(BYTE *pspec, WORD attr);
 WORD dos_snext(void);
 WORD dos_open(BYTE *pname, WORD access);
 WORD dos_close(WORD handle);
-LONG dos_read(WORD handle, LONG cnt, LONG pbuffer);
-LONG dos_write(WORD handle, LONG cnt, LONG pbuffer);
+LONG dos_read(WORD handle, LONG cnt, void *pbuffer);
+LONG dos_write(WORD handle, LONG cnt, void *pbuffer);
 LONG dos_lseek(WORD handle, WORD smode, LONG sofst);
 void dos_exec(WORD mode, const BYTE *pcspec, const BYTE *pcmdln, const BYTE *segenv);  /* see: gemstart.S */
 LONG dos_chdir(BYTE *pdrvpath);
