@@ -3,7 +3,7 @@
 
 /*
 *       Copyright 1999, Caldera Thin Clients, Inc.
-*                 2002-2013 The EmuTOS development team
+*                 2002-2014 The EmuTOS development team
 *
 *       This software is licenced under the GNU Public License.
 *       Please see LICENSE.TXT for further information.
@@ -369,7 +369,7 @@ static WORD rs_readit(AESGLOBAL *pglobal, LONG rsfname)
         fd = dos_open((BYTE *)tmprsfname, RMODE_RD);
 
         if ( !DOS_ERR )
-          dos_read(fd, HDR_LENGTH, (LONG)&hdr_buff[0]);
+          dos_read(fd, HDR_LENGTH, hdr_buff);
                                                 /* read in resource and */
                                                 /*   interpret it       */
         if ( !DOS_ERR )
@@ -382,7 +382,7 @@ static WORD rs_readit(AESGLOBAL *pglobal, LONG rsfname)
           {
                                                 /* read it all in       */
             dos_lseek(fd, SMODE, 0x0L);
-            dos_read(fd, rslsize, rs_hdr.base);
+            dos_read(fd, rslsize, (void *)rs_hdr.base);
             if ( !DOS_ERR)
             {
               rs_global->ap_1resv = rs_hdr.base;
